# python-binary-boilerplate

./: .gitignore  flake.nix  pyproject.toml
.github/workflows/: build.yaml
