[tool.poetry]
name = "python-binary-boilerplate"
version = "0.0.1"
description = ""
authors = ["BoggerByte <nik.troshnev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nuitka = "^2.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
